# Exercise6

./: .gitignore
poisson/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  image.p  matrix_output  pcommon.f90  pcommon.h  poisson  poisson.f90
report/: ex6.aux  ex6.blg  ex6.tex
sourcecode/: .fst.f.swp  .poisson.f.swp  mpi_poisson.f  poisson  poisson.f  test
